--- a/index.html
+++ b/index.html
@@ -4,72 +4,66 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pokemon no oficial page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/style/styles.css" />
+    <script src="/scripts/main.js"></script>
+    <title>No oficial Pokemon page</title>
   </head>
   <body>
-    <header>
-      <img src="/assets/logo.png" alt="Pokemon's logo" />
-      <nav>
-        <ul>
-          <li class="links"><a href="">Home</a></li>
-          <li class="links"><a href="">Buy Cards</a></li>
-          <li class="links"><a href="">Our Blog</a></li>
-        </ul>
-      </nav>
-      <button>Dark Mode</button>
-    </header>
-    <main>
-      <div>
-        <p>Discover the treasures awaiting for you...</p>
-        <h1>Pokemon Action Figures, Toys and cards</h1>
-        <p>
-          Pokémon is a media franchise owned by video game giant Nintendo and
-          created by Satoshi Tajiri around 1995. Originally released as a pair
-          of interlinkable Game Boy role-playing video games, Pokémon has since
-          become the 2nd most successful and lucrative video game-based media
-          franchise in the world, behind only Nintendo's Mario series.
-        </p>
-        <h4>Go to our blog</h4>
-        <h4>Buy cards</h4>
+    <header class="headerContainer">
+      <div class="logoHeaderImage">
+        <img src="./assets/logo.png" alt="">
       </div>
-      <img src="/assets/ash-leaves-anime 1.png" alt="Ash and his frends">
-    </main>
+      <nav class="linksButtonHeader">
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+          <img src="/assets/hamburger.png" class="hamburgerButton"></img>
+        </label>
+        <div class="navLinksHeaderContent">
+          <ul class="navLinksHeader">
+            <li><a href="#" onclick="contentChanger('home')">Home</a></li>
+            <li><a href="#" onclick="contentChanger('buyCards')">Buy Cards</a></li>
+            <li><a href="#" onclick="contentChanger('ourBlog')">Our Blog</a></li>
+          </ul>
+          <button class="darkModeButton">Dark Mode</button>
+        </div>
+      </nav>
+    </header>
+    <main id="mainContainer"></main>
     <footer>
-        <div>
-            <img src="/assets/logo.png" alt="Pokemon's logo">
-            <p>Our vision is to provide convenience and help increase your sales business.</p>
-            <div>
-                <img src="/assets/Facebook.png" alt="Facebook's logo and link">
-                <img src="/assets/instagram.png" alt="Instagram's logo and link">
-                <img src="/assets/twitter.png" alt="Twitter's logo and link">
-            </div>
+        <div class="socialMediaContainer">
+          <div class="logoFooterImage">
+            <img src="./assets/logo.png" alt="">
+          </div>
+          <p>Our vision is to provide convenience and help increase your sales business.</p>
+          <ul class="socialMediaIcons">
+            <li><a href="#"><img class="socialMediaImg" src="/assets/Facebook.png" alt=""></a></li>
+            <li><a href="#"><img class="socialMediaImg" src="/assets/Twitter.png" alt=""></a></li>
+            <li><a href="#"><img class="socialMediaImg" src="/assets/Instagram.png" alt=""></a></li>
+          </ul>
         </div>
-        <div>
+        <div class="extraInfoContainer">
+          <ul>
             <p>About</p>
-            <ul>
-                <li>How it works</li>
-                <li>Featured</li>
-                <li>Partnership</li>
-                <li>Bussiness Relation</li>
-            </ul>
-        </div>
-        <div>
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Featured</a></li>
+            <li><a href="#">Partnership</a></li>
+            <li><a href="#">Bussiness Relation</a></li>
+          </ul>
+          <ul>
             <p>Community</p>
-            <ul>
-                <li>Events</li>
-                <li>Blog</li>
-                <li>Podcast</li>
-                <li>Invite a friend</li>
-            </ul>
-        </div>
-        <div>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Podcast</a></li>
+            <li><a href="#">Invite a friend</a></li>
+          </ul>
+          <ul>
             <p>Socials</p>
-            <ul>
-                <li>Discord</li>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>Facebook</li>
-            </ul>
+            <li><a href="#">Discord</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Facebook</a></li>
+          </ul>
         </div>
     </footer>
   </body>
