Making the API call and adding the styles to the sheet

--- a/buyCards.html
+++ b/buyCards.html
@@ -1,1 +1,12 @@
+<div class="infContainer">
+    <h1>Checkout Out Pokemon Cards</h1>
+    <p>The Pokemon Go expansion for the Pokemon Trading Card Game will release soon. </p>
+    <ul>
+        <li>All</li>
+        <li>Air</li>
+        <li>Fire</li>
+        <li>Water</li>
+    </ul>
+    <div class="line"></div>
+</div>
 <div id="buyCardsContainer"></div>
