--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="linksButtonHeader">
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
-          <img src="/assets/hamburger.png" class="hamburgerButton"></img>
+          <img src="/assets/hamburger.svg" class="hamburgerButton"></img>
         </label>
         <div class="navLinksHeaderContent">
           <ul class="navLinksHeader">
