Adding the blog page and styles

--- a/home.html
+++ b/home.html
@@ -15,6 +15,6 @@
     </ul>
   </div>
   <div class="imageContainer">
-    <img src="/assets/ash-leaves-anime.png" alt="" />
+    <img src="/assets/ashLeavesAnime.png" alt="" />
   </div>
 </div>
