Finishin the app

--- a/buyCards.html
+++ b/buyCards.html
@@ -1,7 +1,7 @@
 <div class="infContainer">
-    <h1>Checkout Out Pokemon Cards</h1>
-    <p>The Pokemon Go expansion for the Pokemon Trading Card Game will release soon. </p>
-    <ul>
+    <h1 class="h1">Checkout Out Pokemon Cards</h1>
+    <p class="p">The Pokemon Go expansion for the Pokemon Trading Card Game will release soon. </p>
+    <ul class="ul">
         <li>All</li>
         <li>Air</li>
         <li>Fire</li>
