--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <div class="homeContainer">
   <div class="descriptionContainer">
-    <p>Discover the treasures awaiting for you...</p>
-    <h1>Pokemon Action Figures, Toys and cards</h1>
-    <p class="information">
+    <p class="p">Discover the treasures awaiting for you...</p>
+    <h1 class="h1">Pokemon Action Figures, Toys and cards</h1>
+    <p class="information p">
       Pokémon is a media franchise owned by video game giant Nintendo and
       created by Satoshi Tajiri around 1995. Originally released as a pair of
       interlinkable Game Boy role-playing video games, Pokémon has since become
@@ -10,8 +10,8 @@
       the world, behind only Nintendo's Mario series.
     </p>
     <ul class="cardsBlogContent">
-      <li><a href="#">Go to our blog</a></li>
-      <li><a href="">Buy cards</a></li>
+      <li><a class="aLinks" href="#">Go to our blog</a></li>
+      <li><a class="aLinks" href="#">Buy cards</a></li>
     </ul>
   </div>
   <div class="imageContainer">
