--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#" onclick="contentChanger('buyCards')">Buy Cards</a></li>
             <li><a href="#" onclick="contentChanger('ourBlog')">Our Blog</a></li>
           </ul>
-          <button class="darkModeButton">Dark Mode</button>
+          <button class="darkMode" onclick="darkMode()">Dark Mode</button>
         </div>
       </nav>
     </header>
