Adding dark mode styles

--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
       the world, behind only Nintendo's Mario series.
     </p>
     <ul class="cardsBlogContent">
-      <li><a class="aLinks" href="#">Go to our blog</a></li>
-      <li><a class="aLinks" href="#">Buy cards</a></li>
+      <li><a class="aLinks darkLinks" href="#">Go to our blog</a></li>
+      <li><a class="aLinks darkLinks" href="#">Buy cards</a></li>
     </ul>
   </div>
   <div class="imageContainer">
