--- a/buyCards.html
+++ b/buyCards.html
@@ -1,12 +1,19 @@
-<div class="infContainer">
-    <h1 class="h1">Checkout Out Pokemon Cards</h1>
-    <p class="p">The Pokemon Go expansion for the Pokemon Trading Card Game will release soon. </p>
-    <ul class="ul">
-        <li>All</li>
-        <li>Air</li>
-        <li>Fire</li>
-        <li>Water</li>
-    </ul>
-    <div class="line"></div>
+<div class="infContainer darInfContainer">
+  <h1 class="h1">Checkout Out Pokemon Cards</h1>
+  <p class="p">
+    The Pokemon Go expansion for the Pokemon Trading Card Game will release
+    soon.
+  </p>
+  <ul class="ul">
+    <li>All</li>
+    <li>Air</li>
+    <li>Fire</li>
+    <li>Water</li>
+  </ul>
+  <div class="line darkLine"></div>
 </div>
-<div id="buyCardsContainer"></div>
+<div id="buyCards"></div>
+<div class="moreCardsContainer">
+  <button class="shoeMoreCards darkShoeMoreCards">Show more cards</button>
+  <p class="totalPokemon darkTotalPokemon"></p>
+</div>
