--- a/ourBlog.html
+++ b/ourBlog.html
@@ -1,4 +1,4 @@
-<div class="titleContainer">
+<div class="titleContainer darkTitleContainer">
     <h1>Lorem ipsum dolor sit</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore e</p>
 </div>
@@ -6,7 +6,7 @@
     <div class="blogImageContainer">
         <img src="/assets/ashLeavesAnime 2.png" alt="">
     </div>
-    <div class="blogInformationContainer">
+    <div class="blogInformationContainer darkTitleContainer">
         <p>The Pokemon Company has revealed a few of the cards in the Pokemon Trading Card Game's upcoming Pokemon Go expansion, featuring Pokemon and trainers that will be familiar to Pokemon Go players.
             The three Pokemon Go team leaders--Valor's Candela, Mystic's Blanche, and Instinct's Spark--will receive Trainer Supporter cards, each one allowing the player to draw two cards and potentially recover an energy card from the discard pile. The three leaders will also each have standard and full-card art variants.
             Some of the Pokemon featured in the card previews are Pikachu, Melmetal, Alolan Exeggutor, and more. Mewtwo is also shown to be the first V-Star Pokemon revealed for the new set, with a power that deals big damage to multiple Pokemon at a time.
